--- a/midea-queries.css
+++ b/midea-queries.css
@@ -10,8 +10,9 @@
         display: none;
     }
     .example-area{
-        gap: 20px;
-        margin-inline:1px;
+        gap: 15px;
+        padding-inline: 0px;
+        margin-inline: 0px;
     }
     .examples-card{
         width: calc(50% - 10px);
@@ -55,5 +56,11 @@
 }
 .bfs-text{
     gap: 35px;
+}
+.headings{
+    flex-direction: column;
+}
+.link-column{
+    padding-top: 20px;
 }
 }
